fix: update movements v2
- added no break on wallet name
- added more space on top
- added refresher message and animation on refresh
- disabled old movement page

--- a/resources/frontend-v2/src/theme/variables.css
+++ b/resources/frontend-v2/src/theme/variables.css
@@ -36,3 +36,7 @@ http://ionicframework.com/docs/theming/ */
 .top-icon {
     font-size: 1.8em;
 }
+
+.no-break {
+    white-space: nowrap;
+}
